--- a/package.json
+++ b/package.json
@@ -3,25 +3,70 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.1"
+    "@builder.io/react": "^8.2.6",
+    "@craftjs/core": "^0.2.12",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@google/genai": "^1.13.0",
+    "@grapesjs/studio-sdk": "^1.0.55",
+    "@hookform/resolvers": "^5.2.1",
+    "@lottiefiles/dotlottie-react": "^0.14.4",
+    "@million/lint": "^1.0.14",
+    "@mui/material": "^7.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^17.2.0",
+    "draft-js": "^0.11.7",
+    "drizzle-orm": "^0.44.3",
+    "drizzle-seed": "^0.3.1",
+    "framer-motion": "^12.23.12",
+    "lodash": "^4.17.21",
+    "lodash.chunk": "^4.2.0",
+    "lucide-react": "^0.525.0",
+    "motion": "^12.23.12",
+    "next": "^15.4.1",
+    "next-themes": "^0.4.6",
+    "pg": "^8.16.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.61.1",
+    "react-icon-cloud": "^4.1.7",
+    "react-icons": "^5.5.0",
+    "react-window": "^1.8.11",
+    "sass": "^1.89.2",
+    "slate": "^0.118.0",
+    "slate-react": "^0.117.4",
+    "styled-components": "^6.1.19",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/draft-js": "^0.11.18",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.5",
+    "typescript": "^5"
   }
 }
