--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.61.1",
     "react-icon-cloud": "^4.1.7",
     "react-icons": "^5.5.0",
+    "react-use-is-online": "^1.2.2",
     "react-window": "^1.8.11",
     "sass": "^1.89.2",
     "slate": "^0.118.0",
