--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@grapesjs/studio-sdk": "^1.0.55",
     "@hookform/resolvers": "^5.2.1",
     "@lottiefiles/dotlottie-react": "^0.14.4",
+    "@microsoft/clarity": "^1.0.0",
     "@million/lint": "^1.0.14",
     "@mui/material": "^7.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
