--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@builder.io/react": "^8.2.6",
     "@craftjs/core": "^0.2.12",
+    "@dnd-kit/core": "^6.3.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@floating-ui/react": "^0.27.16",
     "@google/genai": "^1.13.0",
     "@grapesjs/studio-sdk": "^1.0.55",
     "@hookform/resolvers": "^5.2.1",
+    "@lexical/react": "^0.35.0",
     "@lottiefiles/dotlottie-react": "^0.14.4",
     "@microsoft/clarity": "^1.0.0",
     "@million/lint": "^1.0.14",
@@ -34,36 +37,50 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-form": "^1.19.2",
     "@tanstack/react-query": "^5.85.5",
+    "@tiptap/extension-list": "^3.4.4",
+    "@tiptap/extension-text-style": "^3.4.5",
+    "@tiptap/pm": "^3.4.4",
+    "@tiptap/react": "^3.4.4",
+    "@tiptap/starter-kit": "^3.4.5",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "dotenv": "^17.2.0",
+    "dotenv": "^17.2.2",
     "draft-js": "^0.11.7",
-    "drizzle-orm": "^0.44.3",
+    "drizzle-orm": "^0.44.5",
     "drizzle-seed": "^0.3.1",
+    "drizzle-zod": "^0.8.3",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "flubber": "^0.4.2",
     "framer-motion": "^12.23.12",
+    "lexical": "^0.35.0",
     "lodash": "^4.17.21",
     "lodash.chunk": "^4.2.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.12",
+    "nanoid": "^5.1.6",
     "next": "^15.4.1",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-hotkeys-hook": "^5.1.0",
     "react-icon-cloud": "^4.1.7",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-swipeable": "^7.0.2",
     "react-use-is-online": "^1.2.2",
     "react-window": "^1.8.11",
-    "sass": "^1.89.2",
     "slate": "^0.118.0",
     "slate-react": "^0.117.4",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "zod": "^4.1.0"
   },
   "devDependencies": {
@@ -73,7 +90,7 @@
     "@types/draft-js": "^0.11.18",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20",
-    "@types/pg": "^8.15.4",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-window": "^1.8.8",
@@ -81,7 +98,9 @@
     "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
+    "sass": "^1.92.1",
     "tailwindcss": "^4",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
