--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "tsx db/migrate.ts"
   },
   "dependencies": {
     "@builder.io/react": "^8.2.6",
@@ -23,6 +25,7 @@
     "@microsoft/clarity": "^1.0.0",
     "@million/lint": "^1.0.14",
     "@mui/material": "^7.2.0",
+    "@prisma/client": "^6.16.3",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -43,6 +46,8 @@
     "@tiptap/react": "^3.4.4",
     "@tiptap/starter-kit": "^3.4.5",
     "axios": "^1.11.0",
+    "blockhash": "^0.2.0",
+    "blockhash-core": "^0.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -55,6 +60,8 @@
     "embla-carousel-react": "^8.6.0",
     "flubber": "^0.4.2",
     "framer-motion": "^12.23.12",
+    "hamming-distance": "^1.0.0",
+    "imghash": "^1.1.0",
     "lexical": "^0.35.0",
     "lodash": "^4.17.21",
     "lodash.chunk": "^4.2.0",
@@ -74,6 +81,8 @@
     "react-swipeable": "^7.0.2",
     "react-use-is-online": "^1.2.2",
     "react-window": "^1.8.11",
+    "sharp": "^0.34.4",
+    "sharp-phash": "^2.2.0",
     "slate": "^0.118.0",
     "slate-react": "^0.117.4",
     "slugify": "^1.6.6",
