--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "@tanstack/react-query": "^5.85.5",
     "@tiptap/extension-list": "^3.4.4",
     "@tiptap/extension-text-style": "^3.4.5",
+    "@tiptap/html": "^3.6.2",
     "@tiptap/pm": "^3.4.4",
     "@tiptap/react": "^3.4.4",
     "@tiptap/starter-kit": "^3.4.5",
+    "@tiptap/static-renderer": "^3.6.2",
     "axios": "^1.11.0",
     "blockhash": "^0.2.0",
     "blockhash-core": "^0.1.0",
